# check-circular-import

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
check_circular_import/: __init__.py  __main__.py  detector.py  utils.py
tests/: __init__.py  conftest.py  test_additional_cases.py  test_cli.py  test_complex_scenarios.py  test_detector.py  test_edge_cases.py  test_utils.py
tests/fixtures/: circular_a.py  circular_b.py
